<resources>
    <string name="app_name">OnlineShopSatria</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_apple">Sign in with Apple</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="back">back</string>
    <string name="content_description_back">To go back</string>
    <string name="profile_placeholder">profile placeholder</string>
    <string name="change_photo">Change photo</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="basket">Basket</string>
    <string name="message">Message</string>
    <string name="location">Location</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="action_button_add_for_some_item">action button add for some item</string>
    <string name="view_all">View all</string>
    <string name="latest">Latest</string>
    <string name="flash_sale">Flash Sale</string>

    <string name="field_is_empty">Field is empty</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="sign_up_success">Wow, you have created a new account. Now you can login with it.</string>
    <string name="storage_error">Local storage error</string>
    <string name="email_is_mismatch">Your Email not contains "email.ru"</string>
    <string name="invalid_first_or_password">Invalid first name or password</string>
</resources>