<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@id/page_one_graph"
        android:icon="@drawable/ic_home_menu"
        android:title="@string/home" />

    <item android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite_menu"
        android:title="@string/favorite" />

    <item android:id="@+id/basket"
        android:icon="@drawable/ic_basket_menu"
        android:title="@string/basket" />

    <item android:id="@+id/message"
        android:icon="@drawable/ic_message_menu"
        android:title="@string/message" />

    <item android:id="@id/profile_graph"
        android:icon="@drawable/ic_profile_menu"
        android:title="@string/profile" />

</menu>