<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignInPageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/sign_in"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/header"
            app:layout_constraintStart_toStartOf="@+id/header"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtFirstName"
                style="@style/DefaultTextInput"
                android:layout_width="290dp"
                android:layout_height="35dp"
                android:background="@drawable/edt_background"
                android:hint="@string/first_name"
                android:lines="1" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtLastName"
                style="@style/DefaultTextInput"
                android:layout_width="290dp"
                android:layout_height="35dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/edt_background"
                android:hint="@string/last_name"
                android:lines="1" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                style="@style/DefaultTextInput"
                android:layout_width="290dp"
                android:layout_height="35dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/edt_background"
                android:hint="@string/email"
                android:lines="1" />

            <com.google.android.material.button.MaterialButton
                style="@style/MainButtonsStyle"
                android:id="@+id/btSignIn"
                android:layout_width="290dp"
                android:layout_height="55dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/sign_in"
                />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvbLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/login"
                    android:textColor="@color/text_button_color" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btSignInWithGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="76dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/montserrat"
                android:stateListAnimator="@null"
                android:text="@string/sign_in_with_google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_google"
                app:iconTint="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btSignInWithApple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/montserrat"
                android:stateListAnimator="@null"
                android:text="@string/sign_up_with_apple"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_apple"
                app:iconTint="@color/black" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
