<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    android:background="@color/back_color_in_all_app">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/back_color_in_all_app"
            app:navigationIcon="@drawable/ic_arrow_left"
            app:title="@string/profile"
            app:titleCentered="true"
            app:titleTextAppearance="@style/CustomFontForAppBar" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/profile_placeholder"
        android:src="@drawable/user_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/btChangeAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/change_photo"
        android:textSize="9sp"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:id="@+id/nameLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btChangeAvatar">

        <TextView
            android:id="@+id/tvNameOfCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:textColor="@color/name_of_customer_color"
            android:textSize="17sp"
            tools:text="Satria Adhi Pradana" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btUpload"
            style="@style/MainButtonsStyle"
            android:layout_width="290dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/upload_item"
            app:icon="@drawable/ic_share" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLinear">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    style="@style/SecondButtonsStyle"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:text="@string/trade_store"
                    app:icon="@drawable/ic_credit_card" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_go" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    style="@style/SecondButtonsStyle"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_method"
                    app:icon="@drawable/ic_credit_card" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_go" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">


                <com.google.android.material.button.MaterialButton
                    style="@style/SecondButtonsStyle"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    app:icon="@drawable/ic_credit_card" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$1593"
                    android:textColor="@color/name_of_customer_color"
                    android:textSize="17sp" />

                <Space
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    style="@style/SecondButtonsStyle"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:text="@string/trade_history"
                    app:icon="@drawable/ic_credit_card" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_go" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    style="@style/SecondButtonsStyle"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:text="@string/restore_purchase"
                    app:icon="@drawable/ic_refresh" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_go" />
            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                style="@style/SecondButtonsStyle"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/help"
                app:icon="@drawable/ic_help" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btLogout"
                style="@style/SecondButtonsStyle"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/log_out"
                app:icon="@drawable/ic_logout" />

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>