<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginPageFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/headerOfLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/welcome_back"
        android:textColor="@color/text_color"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/headerOfLogin"
        app:layout_constraintStart_toStartOf="@+id/headerOfLogin"
        app:layout_constraintTop_toBottomOf="@+id/headerOfLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtFirstName"
            style="@style/DefaultTextInput"
            android:layout_width="290dp"
            android:layout_height="35dp"
            android:background="@drawable/edt_background"
            android:hint="@string/first_name"
            android:lines="1" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/DefaultTextInput"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            app:boxBackgroundMode="none"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:expandedHintEnabled="true"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password_space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                style="@style/DefaultTextInput"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/edt_background"
                android:hint="@string/password"
                android:lines="1"
                android:paddingTop="9dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            style="@style/MainButtonsStyle"
            android:id="@+id/btSignIn"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/login"
             />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>