<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color_in_all_app"
    tools:context=".ui.pageone.PageOneFragment"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarPageOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarPageOneBata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/back_color_in_all_app"
            app:buttonGravity="center_vertical"
            app:navigationIcon="@drawable/ic_menu"
            app:title="Trade by bata"
            app:titleCentered="true"
            app:titleTextAppearance="@style/CustomFontForAppBar">

            <LinearLayout
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="50dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageAvatar"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:src="@drawable/user_placeholder" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:text="@string/location"
                        android:textSize="11sp" />

                    <ImageView
                        android:layout_width="6dp"
                        android:layout_height="3dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="2dp"
                        android:src="@drawable/ic_dropdown" />

                </LinearLayout>


            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtFirstName"
        style="@style/SearchTextInput"
        android:layout_width="270dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/edt_back_with_search"
        android:drawableEnd="@drawable/ic_search"
        android:hint="@string/what_are_you_looking_for"
        android:lines="1"
        android:paddingEnd="8dp"
        tools:ignore="RtlSymmetry" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvCategoryItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        
            <TextView
                android:id="@+id/tvLatest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/latest"
                android:layout_marginStart="11dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcvCategoryItem"/>

            <TextView
                android:id="@+id/tvViewAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="9sp"
                android:text="@string/view_all"
                android:clickable="true"
                android:layout_marginEnd="11dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/view_all_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcvCategoryItem"
                android:focusable="true"
                tools:ignore="SmallSp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvLatestItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="160dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLatest" />

            <TextView
                android:id="@+id/tvFlashSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/flash_sale"
                android:layout_marginStart="11dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcvLatestItems"/>

            <TextView
                android:id="@+id/tvViewAllFlash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="9sp"
                android:text="@string/view_all"
                android:clickable="true"
                android:layout_marginEnd="11dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/view_all_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcvLatestItems"
                android:focusable="true"
                tools:ignore="SmallSp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvFlashSaleItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="230dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFlashSale" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>